@@ -1,10 +1,37 @@
+/*
+ * This is a Gradle build file:
+ * - Gradle Homepage: http://gradle.org/
+ * - Gradle Documentation: http://gradle.org/documentation
+ * - View tasks for this project: $ gradlew tasks
+ */
+
 apply plugin: 'java'
+apply plugin: 'project-report'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
+/*
+ * Update Gradle Wrapper:
+ * 1. Uncomment 'wrapper' task
+ * 2. Change 'gradleVersion'
+ * 3. Run "gradlew wrapper"
+ * 4. Comment 'wrapper' task
+ */
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '1.4'
+//}
+
 ext {
-    mainClassName = 'org.terasologyLauncher.Main'
+    mainClassName = 'org.terasologylauncher.Main'
     jarFileName = 'TerasologyLauncher.jar'
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.10'
 }
 
 sourceCompatibility = 1.6
@@ -14,4 +41,12 @@ jar {
     manifest {
         attributes("Main-Class": mainClassName)
     }
+}
+
+test {
+    // ignoreFailures: Specifies whether the build should break when the verifications performed by this task fail.
+    ignoreFailures = true
+    // showStandardStreams: makes the standard streams (err and out) visible at console when running tests
+    testLogging.showStandardStreams = true
+    jvmArgs '-Xms512m', '-Xmx1024m', '-XX:MaxPermSize=128m'
 }
